--- a/index.html
+++ b/index.html
@@ -9,7 +9,5 @@
     <div id="app">
     </div>
   </body>
-  <script src="/build/proj2-trello.1.0.0.js">
-
-  </script>
+  <script src="/build/proj2-trello.1.0.0.js"></script>
 </html>
